tests/errors/syn_if6.java
public class syn_if6 {
public static void main(String[] args){
if ( true {
 
}
}
}